src/main/java/com/example/obrestdata_jpa/Error/BookNotFoundException.java
package com.example.obrestdata_jpa.Error;

public class BookError {
}
